--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.3
-yfinance==0.2.36
-nselib==0.1.6
-plotly==5.18.0
+streamlit>=1.38.0
+pandas>=2.2.0
+numpy>=1.26.0
+yfinance>=0.2.40
+nselib>=0.1.0
+plotly>=5.23.0
