--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.38.0
+streamlit==1.31.1
 pandas>=2.2.0
 numpy>=1.26.0
 yfinance>=0.2.40
 nselib>=0.1.0
 plotly>=5.23.0
 pandas_market_calendars
+
