Reorganize Streamlit config settings

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,7 @@
 [server]
-port = 8080
-address = "0.0.0.0"
-headless = true
-enableCORS = false
 enableXsrfProtection = false
+enableCORS = false
+headless = true
+
+[browser]
+gatherUsageStats = false
