--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 streamlit==1.31.1
-pandas==2.0.3
-numpy==1.24.3
-yfinance==0.2.40
-nselib==0.1.0
-plotly==5.23.0
-pandas_market_calendars==4.3.1
-matplotlib==3.7.2
-scipy==1.11.3
+pandas>=2.2.0
+numpy>=1.26.0
+yfinance>=0.2.40
+nselib>=0.1.0
+plotly>=5.23.0
+pandas_market_calendars
